@@ -1,3 +1,8 @@
+2002-11-16  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* [w3m-dev 03442] Re: setting form on loading
+	* form.c (preFormUpdateBuffer): ifdef MENU_SELECT
+
 2002-11-16  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 03441] charset of save file
@@ -4821,4 +4826,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.525 2002/11/15 16:46:07 ukai Exp $
+$Id: ChangeLog,v 1.526 2002/11/15 16:48:14 ukai Exp $
